syntax = "proto3";

package proto;

service Streamer {
    rpc Stream(stream Request) returns (stream Response) {}
    rpc ServerStream(Request) returns (stream Response) {}
}

message Request {
    Message message = 1;
}

message Response {
    Message message = 1;
}

// message model
message Message {

    string uuid = 1;
    string group_id = 2;
    int64 from_uid = 3;
    string headimg = 4;
    string username = 5;
    string content = 6;
    string content_type = 7;
    string create_time = 8;
}